--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+  <meta charset="UTF-8">
+  <title>Atividade</title>
+</head>
+
 <body>
   <ul id="lista"></ul>
   <script src="atvdd.js"></script>
